fix: resolve issue with text overflow

--- a/app/css/user-card.scss
+++ b/app/css/user-card.scss
@@ -19,7 +19,7 @@
   }
 
   > .info {
-    flex: 2 0 66%;
+    flex: 1 1 auto;
     display: flex;
     justify-content: center;
     align-content: center;
